# protosignet

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
protosignet/: analyze_motifs.py  evolve_motifs.py  main.py  model.py  optimizer.py  plot_results.py  style.py  util.py  utils.py
tests/: test_foo.py
